[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.3"
structopt = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false