[[bench]]
name = 'benchmarks'
harness = false

[package]
name = 'aoc2019'
version = '0.1.0'
authors = ['Alex Komissarov <k.a.komissar@gmail.com>']
edition = '2018'

[dependencies]
atoi = '0.3'
structopt = '0.3'
crossbeam = '0.7.3'
lazy_static = '1.4.0'
itertools = '0.8.2'
bytecount = '0.6.0'

[dev-dependencies]
criterion = '0.3'
[profile.release]
debug = true
